<resources>
    <string name="app_name">RentCalculator</string>
    <string name="name_banner">Mark Lally</string>
    <string name="rent">Rent</string>
    <string name="change">change</string>
    <string name="cost_per_unit_text">Cost per unit</string>
    <string name="meter_units">Meter reading</string>

    <string name="euro_per_unit_text">euros</string>
    <string name="calculate_electricity">Calculate</string>
</resources>
